fix registrazione mobile

--- a/docs/assets/css/mobile.css
+++ b/docs/assets/css/mobile.css
@@ -458,6 +458,8 @@ legend{
 #signup_form > fieldset{
     display: flex;
     flex-direction: column;
+    max-width: 25em;
+    margin: 0 auto;
 }
 
 #signup_form fieldset .signup_input{
@@ -466,7 +468,7 @@ legend{
     border: 1px solid var(--form-border-input-color);
     background-color: var(--form-bg-color);
     color: var(--navbar-text-color);
-    margin: 0 5em 1em 5em;
+    margin: 0 0 1em 0;
     font-size: 100%;
     font-family: "Lexend", Roboto, sans-serif;
     padding-left: 1em;
@@ -484,7 +486,7 @@ input[type="date"]::-webkit-calendar-picker-indicator {
     position: relative;
     top: 0.85em;
     width: max-content;
-    margin-left: 6em;
+    margin-left: 1em;
     z-index: 1;
 }
 
