--- a/docs/assets/css/desktop.css
+++ b/docs/assets/css/desktop.css
@@ -240,6 +240,26 @@ select option {
     text-underline-offset: 0.3em;
 }
 
+.backToTop{
+    position: sticky;
+    bottom: 2em;
+    right: 2em;
+}
+.backToTopShow{
+    color: var(--navbar-text-color);
+    background-color: var(--navbar-bg-color);
+    padding: 1em;
+    border-radius: 15px;
+    position: absolute;
+    bottom: 0.5em;
+    right: 1em;
+}
+
+.backToTopHidden{
+    position: absolute;
+    right: -999em;
+}
+
 /*#region Login*/
 /******************* 
         LOGIN
@@ -487,7 +507,6 @@ input[type="date"]::-webkit-calendar-picker-indicator {
 #test_drive_main {
     display: flex;
     flex-direction: column;
-    align-items: center;
     width: 100%;
 }
 
@@ -527,6 +546,7 @@ input[type="date"]::-webkit-calendar-picker-indicator {
     padding: 3em 0;
     text-align: center;
     width: 60%;
+    margin: auto;
 }
 
 #test_drive_comefunziona > h3{
@@ -578,7 +598,7 @@ input[type="date"]::-webkit-calendar-picker-indicator {
     color: var(--form-text-color);
     border-radius: 2em 0 2em 0;
     width: 80%;
-    margin-bottom: 4em;
+    margin:auto auto 4em auto;
     box-shadow: rgba(17, 17, 26, 0.1) 0px 1px 0px, rgba(17, 17, 26, 0.1) 0px 8px 24px, rgba(17, 17, 26, 0.1) 0px 16px 48px;
     padding-bottom: 3em;
 }
