--- a/docs/assets/css/mobile.css
+++ b/docs/assets/css/mobile.css
@@ -337,6 +337,27 @@ a:visited {
     text-underline-offset: 0.3em;
 }
 
+.backToTop{
+    position: sticky;
+    bottom: 2em;
+    right: 2em;
+}
+.backToTopShow{
+    color: var(--navbar-text-color);
+    background-color: var(--navbar-bg-color);
+    padding: 1em;
+    border-radius: 15px;
+    position: absolute;
+    bottom: 0.5em;
+    right: 1em;
+}
+
+.backToTopHidden{
+    position: absolute;
+    right: -999em;
+}
+
+
 /*#region Login*/
 /******************* 
         LOGIN
