sistemato css amministratore

--- a/docs/assets/css/desktop.css
+++ b/docs/assets/css/desktop.css
@@ -32,7 +32,13 @@
     margin: 0;
 }
 
-html { scroll-behavior: smooth; }           /* Per lo smooth scrolling !!! CREA PROBLEMI CON LA VISUALIZZAZIONE DI ERRORI REQUIRED IN FORM TROPPO LUNGHI */
+html {
+    scroll-behavior: smooth;
+}
+
+.html_smooth { scroll-behavior: smooth; }           /* Per lo smooth scrolling !!! CREA PROBLEMI CON LA VISUALIZZAZIONE DI ERRORI REQUIRED IN FORM TROPPO LUNGHI */
+
+.html_auto { scroll-behavior: auto; }
 
 h1, h2, h3 {
     text-align: center;
@@ -257,7 +263,7 @@ select option {
 
 .backToTopHidden{
     position: absolute;
-    right: -999em;
+    text-indent: -999em;
 }
 
 /*#region Login*/
